// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerInput should not render search in none mode 1`] = `
<body
  style="overflow: visible;"
>
  <div>
    <div
      class="container uui-input-box -clickable root size-36 mode-form"
      tabindex="0"
    >
      <div
        class="body multiline"
      >
        <input
          aria-haspopup="true"
          autocomplete="no"
          class="uui-input"
          placeholder="Please select "
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
      <div
        class="actions"
      >
        <div
          class="container uui-icon uui-enabled -clickable uui-icon-dropdown"
        >
          <svg
            class="flipY"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    data-no-focus-lock="true"
  >
    <div
      aria-expanded="true"
      aria-hidden="false"
      class="uui-popper"
      data-placement="bottom-start"
      role="dialog"
      style="z-index: 2000;"
    >
      <div
        class="uui-panel root panel -lock-focus container"
        style="width: 360px;"
        tabindex="-1"
      >
        <div
          class="root size-36 body dropdown multi container align-items-center"
          style="max-height: 300px;"
        >
          <div
            class="root scrollContainer"
            cx="scrollContainer"
            style="position: relative; overflow: hidden; width: 100%; height: 100%; display: flex;"
          >
            <div
              aria-multiselectable="true"
              aria-orientation="vertical"
              style="position: relative; top: 0px; left: 0px; right: 0px; bottom: 0px; overflow: scroll; margin-right: 0px; margin-bottom: 0px; flex: 1 1 auto; display: flex; flex-direction: column;"
            >
              <div
                class="listContainer"
                style="min-height: 1px;"
              >
                <div
                  role="listbox"
                  style="margin-top: 0px;"
                >
                  <div
                    aria-checked="false"
                    aria-posinset="1"
                    class="uui-focus pickerRow container -clickable align-items-center"
                    role="option"
                  >
                    <div
                      class="uui-table-cell cell data-table-cell cell size-36 padding-12 padding-left-12 align-widgets-top"
                      role="cell"
                      style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                    >
                      <label
                        class="container uui-checkbox-container root size-18 mode-form checkbox -clickable"
                        tabindex="-1"
                      >
                        <div
                          class="uui-checkbox"
                        >
                          <input
                            tabindex="-1"
                            type="checkbox"
                          />
                        </div>
                      </label>
                      <div
                        class="contentWrapper"
                      >
                        <div
                          class="renderItem"
                        >
                          <div
                            class="flexCell root"
                            style="min-width: 0; flex-basis: auto;"
                          >
                            <div
                              class="root size-36 spacing-12 container align-items-center"
                            >
                              <div
                                class="flexCell"
                                style="min-width: 0; flex-basis: auto;"
                              />
                            </div>
                          </div>
                          <div
                            class="flexSpacer"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="uui-track-horizontal"
              style="position: absolute; height: 6px; display: none;"
            >
              <div
                class="uui-thumb-horizontal"
              />
            </div>
            <div
              class="uui-track-vertical"
              style="position: absolute; width: 6px; display: none;"
            >
              <div
                class="uui-thumb-vertical"
              />
            </div>
          </div>
        </div>
        <div
          class="root size-36 padding-12 container align-items-center"
        >
          <label
            class="container switch-vars root size-18 uui-disabled"
          >
            <div
              class="uui-switch-body"
            >
              <input
                aria-checked="false"
                aria-disabled="true"
                disabled=""
                role="switch"
                type="checkbox"
              />
              <div
                class="uui-switch-toggler"
              />
            </div>
            <div
              class="uui-input-label"
            >
              Show only selected
            </div>
          </label>
          <div
            class="flexSpacer"
          />
          <div
            class="flexCell"
            style="min-width: 0; flex-basis: auto; align-self: center;"
          >
            <button
              aria-label="SELECT ALL"
              class="container uui-button-box uui-enabled -clickable root size-36 uui-no-left-icon uui-no-right-icon link-button-primary"
              tabindex="0"
              type="button"
            >
              <div
                class="uui-caption"
              >
                SELECT ALL
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`PickerInput should render icon at specific position 1`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-form"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body multiline"
  >
    <div
      className="container uui-icon uui-enabled"
      style={Object {}}
    >
      <div
        data-testid="test-icon"
      />
    </div>
    <input
      aria-haspopup={true}
      autoComplete="no"
      className="uui-input cursorText"
      onChange={[Function]}
      placeholder="Please select "
      readOnly={true}
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-dropdown"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</div>
`;

exports[`PickerInput should render icon at specific position 2`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-form"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body multiline"
  >
    <div
      className="container uui-icon uui-enabled"
      style={Object {}}
    >
      <div
        data-testid="test-icon"
      />
    </div>
    <input
      aria-haspopup={true}
      autoComplete="no"
      className="uui-input cursorText"
      onChange={[Function]}
      placeholder="Please select "
      readOnly={true}
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-dropdown"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</div>
`;

exports[`PickerInput should render icon at specific position 3`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-form"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body multiline"
  >
    <input
      aria-haspopup={true}
      autoComplete="no"
      className="uui-input cursorText"
      onChange={[Function]}
      placeholder="Please select "
      readOnly={true}
      tabIndex={-1}
      type="text"
      value=""
    />
    <div
      className="container uui-icon uui-enabled"
      style={Object {}}
    >
      <div
        data-testid="test-icon"
      />
    </div>
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-dropdown"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</div>
`;

exports[`PickerInput should render input as invalid 1`] = `
<div
  className="container uui-input-box uui-invalid -clickable root size-36 mode-form"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body"
  >
    <input
      aria-haspopup={true}
      autoComplete="no"
      className="uui-input singleInput cursorText"
      onChange={[Function]}
      placeholder="Please select "
      readOnly={true}
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-dropdown"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</div>
`;

exports[`PickerInput should render search in body 1`] = `
<body
  style="overflow: visible;"
>
  <div>
    <div
      class="container uui-input-box -clickable root size-36 mode-form"
      tabindex="0"
    >
      <div
        class="body multiline"
      >
        <input
          aria-haspopup="true"
          autocomplete="no"
          class="uui-input"
          placeholder="Please select "
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
      <div
        class="actions"
      >
        <div
          class="container uui-icon uui-enabled -clickable uui-icon-dropdown"
        >
          <svg
            class="flipY"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    data-no-focus-lock="true"
  >
    <div
      aria-expanded="true"
      aria-hidden="false"
      class="uui-popper"
      data-placement="bottom-start"
      role="dialog"
      style="z-index: 2000;"
    >
      <div
        class="uui-panel root panel -lock-focus container"
        style="width: 360px;"
        tabindex="-1"
      >
        <div
          class="searchWrapper"
        >
          <div
            class=""
            style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
          >
            <div
              class="container uui-input-box -clickable uui-focus root size-36 mode-form"
              tabindex="-1"
            >
              <div
                class="container uui-icon uui-enabled"
              >
                <svg
                  class=""
                />
              </div>
              <input
                aria-invalid="false"
                class="uui-input"
                inputmode="search"
                placeholder="Search"
                tabindex="-1"
                type="search"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="root size-36 body dropdown multi container align-items-center"
          style="max-height: 300px;"
        >
          <div
            class="root scrollContainer"
            cx="scrollContainer"
            style="position: relative; overflow: hidden; width: 100%; height: 100%; display: flex;"
          >
            <div
              aria-multiselectable="true"
              aria-orientation="vertical"
              style="position: relative; top: 0px; left: 0px; right: 0px; bottom: 0px; overflow: scroll; margin-right: 0px; margin-bottom: 0px; flex: 1 1 auto; display: flex; flex-direction: column;"
            >
              <div
                class="listContainer"
                style="min-height: 1px;"
              >
                <div
                  role="listbox"
                  style="margin-top: 0px;"
                >
                  <div
                    aria-checked="false"
                    aria-posinset="1"
                    class="uui-focus pickerRow container -clickable align-items-center"
                    role="option"
                  >
                    <div
                      class="uui-table-cell cell data-table-cell cell size-36 padding-12 padding-left-12 align-widgets-top"
                      role="cell"
                      style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                    >
                      <label
                        class="container uui-checkbox-container root size-18 mode-form checkbox -clickable"
                        tabindex="-1"
                      >
                        <div
                          class="uui-checkbox"
                        >
                          <input
                            tabindex="-1"
                            type="checkbox"
                          />
                        </div>
                      </label>
                      <div
                        class="contentWrapper"
                      >
                        <div
                          class="renderItem"
                        >
                          <div
                            class="flexCell root"
                            style="min-width: 0; flex-basis: auto;"
                          >
                            <div
                              class="root size-36 spacing-12 container align-items-center"
                            >
                              <div
                                class="flexCell"
                                style="min-width: 0; flex-basis: auto;"
                              />
                            </div>
                          </div>
                          <div
                            class="flexSpacer"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="uui-track-horizontal"
              style="position: absolute; height: 6px; display: none;"
            >
              <div
                class="uui-thumb-horizontal"
              />
            </div>
            <div
              class="uui-track-vertical"
              style="position: absolute; width: 6px; display: none;"
            >
              <div
                class="uui-thumb-vertical"
              />
            </div>
          </div>
        </div>
        <div
          class="root size-36 padding-12 container align-items-center"
        >
          <label
            class="container switch-vars root size-18 uui-disabled"
          >
            <div
              class="uui-switch-body"
            >
              <input
                aria-checked="false"
                aria-disabled="true"
                disabled=""
                role="switch"
                type="checkbox"
              />
              <div
                class="uui-switch-toggler"
              />
            </div>
            <div
              class="uui-input-label"
            >
              Show only selected
            </div>
          </label>
          <div
            class="flexSpacer"
          />
          <div
            class="flexCell"
            style="min-width: 0; flex-basis: auto; align-self: center;"
          >
            <button
              aria-label="SELECT ALL"
              class="container uui-button-box uui-enabled -clickable root size-36 uui-no-left-icon uui-no-right-icon link-button-primary"
              tabindex="0"
              type="button"
            >
              <div
                class="uui-caption"
              >
                SELECT ALL
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`PickerInput should render search in input 1`] = `
<body
  style="overflow: visible;"
>
  <div>
    <div
      class="container uui-input-box -clickable root size-36 mode-form"
      tabindex="0"
    >
      <div
        class="body multiline"
      >
        <input
          aria-haspopup="true"
          autocomplete="no"
          class="uui-input cursorText"
          placeholder="Please select "
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
      <div
        class="actions"
      >
        <div
          class="container uui-icon uui-enabled -clickable uui-icon-dropdown"
        >
          <svg
            class="flipY"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    data-no-focus-lock="true"
  >
    <div
      aria-expanded="true"
      aria-hidden="false"
      class="uui-popper"
      data-placement="bottom-start"
      role="dialog"
      style="z-index: 2000;"
    >
      <div
        class="uui-panel root panel -lock-focus container"
        style="width: 360px;"
        tabindex="-1"
      >
        <div
          class="root size-36 body dropdown multi container align-items-center"
          style="max-height: 300px;"
        >
          <div
            class="root scrollContainer"
            cx="scrollContainer"
            style="position: relative; overflow: hidden; width: 100%; height: 100%; display: flex;"
          >
            <div
              aria-multiselectable="true"
              aria-orientation="vertical"
              style="position: relative; top: 0px; left: 0px; right: 0px; bottom: 0px; overflow: scroll; margin-right: 0px; margin-bottom: 0px; flex: 1 1 auto; display: flex; flex-direction: column;"
            >
              <div
                class="listContainer"
                style="min-height: 1px;"
              >
                <div
                  role="listbox"
                  style="margin-top: 0px;"
                >
                  <div
                    aria-checked="false"
                    aria-posinset="1"
                    class="uui-focus pickerRow container -clickable align-items-center"
                    role="option"
                  >
                    <div
                      class="uui-table-cell cell data-table-cell cell size-36 padding-12 padding-left-12 align-widgets-top"
                      role="cell"
                      style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                    >
                      <label
                        class="container uui-checkbox-container root size-18 mode-form checkbox -clickable"
                        tabindex="-1"
                      >
                        <div
                          class="uui-checkbox"
                        >
                          <input
                            tabindex="-1"
                            type="checkbox"
                          />
                        </div>
                      </label>
                      <div
                        class="contentWrapper"
                      >
                        <div
                          class="renderItem"
                        >
                          <div
                            class="flexCell root"
                            style="min-width: 0; flex-basis: auto;"
                          >
                            <div
                              class="root size-36 spacing-12 container align-items-center"
                            >
                              <div
                                class="flexCell"
                                style="min-width: 0; flex-basis: auto;"
                              />
                            </div>
                          </div>
                          <div
                            class="flexSpacer"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="uui-track-horizontal"
              style="position: absolute; height: 6px; display: none;"
            >
              <div
                class="uui-thumb-horizontal"
              />
            </div>
            <div
              class="uui-track-vertical"
              style="position: absolute; width: 6px; display: none;"
            >
              <div
                class="uui-thumb-vertical"
              />
            </div>
          </div>
        </div>
        <div
          class="root size-36 padding-12 container align-items-center"
        >
          <label
            class="container switch-vars root size-18 uui-disabled"
          >
            <div
              class="uui-switch-body"
            >
              <input
                aria-checked="false"
                aria-disabled="true"
                disabled=""
                role="switch"
                type="checkbox"
              />
              <div
                class="uui-switch-toggler"
              />
            </div>
            <div
              class="uui-input-label"
            >
              Show only selected
            </div>
          </label>
          <div
            class="flexSpacer"
          />
          <div
            class="flexCell"
            style="min-width: 0; flex-basis: auto; align-self: center;"
          >
            <button
              aria-label="SELECT ALL"
              class="container uui-button-box uui-enabled -clickable root size-36 uui-no-left-icon uui-no-right-icon link-button-primary"
              tabindex="0"
              type="button"
            >
              <div
                class="uui-caption"
              >
                SELECT ALL
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`PickerInput should render with maximum props 1`] = `
<div
  className="container uui-input-box -clickable root size-48 mode-form"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body multiline"
  >
    <button
      className="container uui-button-box uui-enabled size-42 root"
      onClick={[Function]}
      tabIndex={-1}
      type="button"
    >
      <div
        className="uui-caption"
      >
        A1
      </div>
      <div
        className="container uui-icon uui-enabled -clickable -clickable"
        onClick={[Function]}
        style={Object {}}
      >
        <svg
          className=""
        />
      </div>
    </button>
    <button
      className="container uui-button-box uui-enabled size-42 root"
      onClick={[Function]}
      tabIndex={-1}
      type="button"
    >
      <div
        className="uui-caption"
      >
        A1+
      </div>
      <div
        className="container uui-icon uui-enabled -clickable -clickable"
        onClick={[Function]}
        style={Object {}}
      >
        <svg
          className=""
        />
      </div>
    </button>
  </div>
  <div
    className="actions"
  >
    <div
      aria-label="Clear"
      className="container uui-icon uui-enabled -clickable uui-icon-cancel -clickable"
      onClick={[Function]}
      role="button"
      style={Object {}}
      tabIndex={-1}
    >
      <svg
        className=""
      />
    </div>
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-dropdown"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</div>
`;

exports[`PickerInput should render with minimum props 1`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-form"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body"
  >
    <input
      aria-haspopup={true}
      autoComplete="no"
      className="uui-input singleInput cursorText"
      onChange={[Function]}
      placeholder="Please select "
      readOnly={true}
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-dropdown"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</div>
`;

exports[`PickerInput should render with mode = cell 1`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-cell"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body multiline"
  >
    <input
      aria-haspopup={true}
      autoComplete="no"
      className="uui-input cursorText"
      onChange={[Function]}
      placeholder="Please select "
      readOnly={true}
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-dropdown"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</div>
`;

exports[`PickerInput should render with mode = form 1`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-form"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body multiline"
  >
    <input
      aria-haspopup={true}
      autoComplete="no"
      className="uui-input cursorText"
      onChange={[Function]}
      placeholder="Please select "
      readOnly={true}
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-dropdown"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</div>
`;

exports[`PickerInput should render with mode = inline 1`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-inline"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body multiline"
  >
    <input
      aria-haspopup={true}
      autoComplete="no"
      className="uui-input cursorText"
      onChange={[Function]}
      placeholder="Please select "
      readOnly={true}
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-dropdown"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</div>
`;

exports[`PickerInput should render with mode = undefined 1`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-form"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body multiline"
  >
    <input
      aria-haspopup={true}
      autoComplete="no"
      className="uui-input cursorText"
      onChange={[Function]}
      placeholder="Please select "
      readOnly={true}
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-dropdown"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</div>
`;

exports[`PickerInput should support single line 1`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-form"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body"
  >
    <input
      aria-haspopup={true}
      autoComplete="no"
      className="uui-input cursorText"
      onChange={[Function]}
      placeholder="Please select "
      readOnly={true}
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-dropdown"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</div>
`;
